GNOME Bugzilla – Bug 680105
Applying aspect ratio makes touch device very slow
Last modified: 2012-07-17 16:41:46 UTC
Created attachment 219029 [details] [review] proposed patch to avoid the issue with touch devices Both calibration and aspect ratio use the "area" parameter of the device, but on the same hardware, stylus and touch part may not have the same resolution: $xsetwacom --get "Wacom Intuos5 touch M Finger touch" Area 0 0 4096 4096 $ xsetwacom --get "Wacom Intuos5 touch M Pen stylus" Area 0 0 44704 27940 Therefore applying the area computed on the stylus on the touch device makes it very slow (almost unusable). The proposed patch avoid applying the area on touch devices, these are normally set to relative mode so aspect ratio does not make sense there either.
Created attachment 219031 [details] [review] Updated patch Adds a comment for why we ignore touch devices when setting area.
Created attachment 219032 [details] [review] Updated patch Really add the comment...
Note: This patch applies on top of the patch for bug 680105
err, I meant this patch applies on top of the patch for bug 677095
Committed.