wacom: do not apply area on touch devices

because the actual device area may differ from the stylus
area.

https://bugzilla.gnome.org/show_bug.cgi?id=680105